<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2013-2015 INRIX, Inc.

  INRIX is a registered trademark of INRIX, Inc. Any copyright, patent and trademark notice(s)
  contained herein or in related code, files or documentation shall not be altered and shall be
  included in all copies and substantial portions of the software. This software is "Sample Code".
  Refer to the License.pdf file for your rights to use this software.
  -->

<resources>
    <string name="app_name">INRIX Sample Application</string>

    <string name="permission_rationale_location">Current location is needed to initialize INRIX SDK</string>

    <string name="action_settings">Settings</string>
    <string name="demo_activity">INRIX Sample Application</string>
    <string name="connection_switch_label">INRIX Traffic</string>
    <string name="action_refresh">Refresh</string>
    <string name="route_list_item_arrival_time">Arrival time:&#160;</string>
    <string name="route_list_item_travel_time">Travel time:&#160;</string>
    <string name="route_list_item_travel_time_format">&#160;%s mins</string>
    <string name="route_list_item_destination_header">Route to %s\n</string>
    <string name="incident_delay_header">Delay:&#160;</string>
    <string name="incident_backup_header">Back up:&#160;</string>
    <string name="incident_start_time">Start&#160;</string>
    <string name="incident_end_time">End&#160;</string>
    <string name="incident_road_closure">Road Closed</string>
    <string name="incident_congestion">Congestion</string>
    <string name="incident_construction">Construction</string>
    <string name="incident_event">Event or Gathering</string>
    <string name="incident_hazard">Hazard</string>
    <string name="incident_police">Police</string>
    <string name="incident_accident">Accident</string>
    <string name="incident_description_loading">Loading...</string>
    <string name="incident_description_not_available">Description loading problem...</string>
    <string name="incident_distance">%.1f miles</string>
    <string name="incident_details">Incident details</string>
    <string name="error_inrix_missing">Please, install INRIX application</string>
    <string name="title_activity_incident_list">IncidentListActivity</string>
    <string name="title_activity_incident_alerts">Incident Alerts Sample</string>
    <string name="title_activity_travel_time">TravelTimeActivity</string>
    <string name="tab_title_geocode">Geocode</string>
    <string name="tab_title_reverse_geocode">Reverse Geocode</string>
    <string name="geocode_enter_address">Enter Address:</string>
    <string name="geocode_default_address">USA Seattle</string>
    <string name="geocode_geocode">Geocode</string>
    <string name="geocode_status_geocoder_error">Geocoder Error</string>
    <string name="geocode_status_network_error">Network Error</string>
    <string name="geocode_status_no_address_found">No Address Found</string>
    <string name="geocode_status_in_progress">In Progress...</string>
    <string name="geocode_max_results">Max Results:&#160;</string>
    <string name="geocode_result_latitude">Lat:&#160;</string>
    <string name="geocode_result_longitude">Lng:&#160;</string>
    <string name="geocode_results">Result:\n%1$s</string>
    <string name="incident_report_activity_title">Report Incident</string>
    <string name="incident_report_this_side">This side</string>
    <string name="incident_report_other_side">Other side</string>
    <string name="incident_report_report">Report</string>
    <string name="incident_report_confirm">Confirm</string>
    <string name="incident_report_clear">All Clear</string>
    <string name="incident_report_delete">Delete</string>
    <string name="service_availability_activity_title">GetServiceAvailability</string>
    <string name="service_availability_activity_country">Country Code:</string>
    <string name="service_availability_activity_latitude">Latitude:</string>
    <string name="service_availability_activity_longitude">Longitude:</string>
    <string name="service_availability_button_country">Get Service Availability from Country Code</string>
    <string name="service_availability_button_geopoint">Get Service Availability Via GeoPoint</string>
    <string name="service_availability_no_service">...Nothing...Good Day Sir!</string>
    <string name="service_availability_default_latitude">47.6544948</string>
    <string name="service_availability_default_longitude">-122.2047568</string>
    <string name="service_availability_available">Service is available</string>
    <string name="service_availability_not_available">Service is not available</string>
    <string name="service_availability_failed">Request failed: %1$s</string>
    <string name="service_availability_geo_point_format">%1$.8f,%2$.8f</string>
    <string name="location_search_searching">Searching...</string>
    <string name="location_search_error">Error: %1$s</string>
    <string name="location_search_no_matches">No Matches!</string>
    <string name="trips_activity_title">Trips</string>
    <string name="trips_activity_origin">Origin</string>
    <string name="trips_activity_home">Home</string>
    <string name="trips_activity_waypoint">Include stop at coffee shop?</string>
    <string name="trips_activity_destination">Destination</string>
    <string name="trips_activity_work">Work</string>
    <string name="trips_activity_alert">Enable notifications for this trip?</string>
    <string name="trips_activity_recurring">Recurring (every weekday)</string>
    <string name="trips_activity_one_time">One Time</string>
    <string name="trip_list_item_title">%1$s to %2$s</string>
    <string name="trip_list_item_recurring">Recurring</string>
    <string name="trip_list_item_one_time">One Time</string>
    <string name="trips_button">Save Trip</string>
    <string name="uas_account_name_template">user@inrix.com</string>
    <string name="uas_account_password">P@ssW0RD12#</string>
    <string name="uas_create_account">Create Account</string>
    <string name="uas_get_account">Get Account</string>
    <string name="uas_sign_in">Sign In</string>
    <string name="uas_sign_out">Sign Out</string>
    <string name="uas_reset_password">Reset Password</string>
    <string name="uas_change_password">Change Password</string>
    <string name="uas_update_push_info">Update Parse Information</string>
    <string name="empty_cameras">Select cameras API from menu</string>
    <string name="xdincident_noresults">No XDIncidents Found!</string>
    <string name="sample_xdincidents">XDIncidents</string>
    <string name="sample_xd_incidents">Find XDIncidents</string>
    <string name="xdincident_in_radius">XDIncidents in Radius</string>
    <string name="xdincident_searching">Searching XDIncidents....</string>
    <string name="xdincident_in_box">XDIncidents in Box</string>
    <string name="itinerary_activity_intro">Create trips to populate a user\'s itinerary</string>
    <string name="itinerary_button_work">Create a weekday trip (home to work)</string>
    <string name="itinerary_button_dentist">Create a one time trip to the dentist</string>
    <string name="itinerary_button_home">Create a weekday trip (work to home)</string>
    <string name="itinerary_button_delete">Delete all trips</string>
    <string name="itinerary_save_success">Successfully saved trip</string>
    <string name="itinerary_delete_success">Deleted all trips</string>
    <string name="itinerary_failed">Request failed: %1$s</string>
    <string name="itinerary_title">Itinerary</string>
    <string name="itinerary_list_item_title">%1$s to %2$s</string>
    <string name="itinerary_list_item_date_format">EEE, dd MMM yyyy HH:mm:ss z</string>
    <string name="itinerary_no_entries_toast">No entries in the itinerary</string>
    <string name="itinerary_error_toast">Error getting itinerary</string>
    <string name="inrix_server_error">INRIX Services Error!</string>
    <string name="sdk_error">INRIX SDK Level Error</string>
    <string name="report_vehicle_state">Report Vehicle State sample</string>
    <string name="report_vehicle_state_register_vehicle">Register vehicle</string>
    <string name="report_vehicle_state_unregister_vehicle">Unregister Vehicle</string>
    <string name="report_vehicle_state_report_state">Report State</string>
    <string name="service_invocation_title">Service Invocation Sample</string>
    <string name="service_invocation_invoke">Invoke</string>
    <string name="service_invocation_result">Result:</string>
    <string name="parse_installation_id_label_format">Parse installation id: %1$s</string>
    <string name="tab_title_nearby_search">Nearby</string>
    <string name="tab_title_autocomplete_search">Autocomplete</string>
    <string name="autocomplete_hint">Start typing to search...</string>

    <string name="bullet_list_item_format">•\t%1$s</string>

    <!-- Parking -->
    <string name="onstreet_parking_empty_result">No on-street parking is available at this location</string>
    <string name="parking_block_title">Parking block</string>
    <string name="parking_block_title_format">%1$s (ID: %2$s)</string>
    <string name="parking_block_pay_stations_title">Pay stations</string>
    <string name="parking_block_sections_title">Parking sections</string>
    <string name="parking_block_section_capacity">Capacity:</string>
    <string name="parking_block_section_capacity_format">%1$d (%2$d\uFE6A)\t\t(offset: %3$d - %4$d meters)</string>
    <string name="parking_block_section_side">Side:</string>
    <string name="parking_block_section_zone">Zone:</string>
    <string name="parking_block_section_pricing">Pricing:</string>
    <string name="parking_block_section_pricing_format">%1$s - %2$s %3$s</string>
    <string name="parking_block_section_restrictions">Restrictions:</string>
    <string name="parking_block_section_restriction_format">%1$s: %2$s %3$s</string>
    <string name="parking_block_from_format">From: %1$s (%2$s)</string>
    <string name="parking_block_to_format">To: %1$s (%2$s)</string>
    <string name="parking_block_pay_station_format">ID: %1$s @ %2$s</string>
    <string name="parking_block_info_not_available">Not available</string>
    <string name="parking_section_zone_no_parking">No parking</string>
    <string name="parking_section_zone_carpool">Carpool only</string>
    <string name="parking_section_zone_non_paid">Non-paid parking</string>
    <string name="parking_section_zone_paid_parking">Paid parking only</string>
    <string name="parking_section_zone_restricted">Restricted parking</string>
    <string name="parking_section_zone_time_limited">Time-limited parking</string>
    <string name="parking_section_zone_unrestricted">Unrestricted</string>
    <string name="parking_section_zone_none">Unknown</string>

</resources>
