<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2013-2015 INRIX, Inc.

  INRIX is a registered trademark of INRIX, Inc. Any copyright, patent and trademark notice(s)
  contained herein or in related code, files or documentation shall not be altered and shall be
  included in all copies and substantial portions of the software. This software is "Sample Code".
  Refer to the License.pdf file for your rights to use this software.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@string/uas_account_name_template" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/uas_account_password" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uas_create_account" />

        <Button
            android:id="@+id/buttonUpdatePushChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uas_update_push_info" />

        <TextView
            android:id="@+id/parseObjectId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>