<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geocode_enter_address" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/geocode_default_address"
            android:text="@string/geocode_default_address" />

        <TextView
            android:id="@+id/txt_max_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geocode_max_results" />

        <SeekBar
            android:id="@+id/seek_bar_max_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="9"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:progress="0" />

        <Button
            android:id="@+id/btn_geocode_reverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geocode_reverse_geocode" />

        <TextView
            android:id="@+id/txt_address_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>