<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013-2015 INRIX, Inc.

  INRIX is a registered trademark of INRIX, Inc. Any copyright, patent and trademark notice(s)
  contained herein or in related code, files or documentation shall not be altered and shall be
  included in all copies and substantial portions of the software. This software is "Sample Code".
  Refer to the License.pdf file for your rights to use this software.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="#FFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RadioButton
            android:id="@+id/report_construction_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/report_incident_horizontal_margin"
            android:layout_marginLeft="@dimen/report_incident_horizontal_margin"
            android:layout_marginRight="@dimen/report_incident_vertical_margin"
            android:layout_marginTop="@dimen/report_incident_vertical_margin"
            android:layout_weight="1"
            android:background="@drawable/incident_button_background"
            android:drawableTop="@drawable/construction"
            android:gravity="center"
            android:text="@string/incident_construction"
            android:textColor="#000"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/report_accident_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/report_incident_horizontal_margin"
            android:layout_marginTop="@dimen/report_incident_vertical_margin"
            android:layout_weight="1"
            android:background="@drawable/incident_button_background"
            android:drawableTop="@drawable/accident"
            android:gravity="center"
            android:text="@string/incident_accident"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RadioButton
            android:id="@+id/report_police_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/report_incident_vertical_margin"
            android:layout_marginLeft="@dimen/report_incident_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/incident_button_background"
            android:drawableTop="@drawable/police"
            android:gravity="center"
            android:text="@string/incident_police"
            android:textColor="#000"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/report_hazard_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/report_incident_vertical_margin"
            android:layout_marginRight="@dimen/report_incident_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/incident_button_background"
            android:drawableTop="@drawable/hazard"
            android:gravity="center"
            android:text="@string/incident_hazard"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/side_of_road_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RadioButton
            android:id="@+id/side_of_road_this_side_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/incident_button_background"
            android:checked="true"
            android:text="@string/incident_report_this_side"
            android:textColor="#000" />

        <RadioButton
            android:id="@+id/side_of_road_other_side_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/incident_button_background"
            android:text="@string/incident_report_other_side"
            android:textColor="#000" />
    </RadioGroup>

    <Button
        android:id="@+id/report_incident_button"
        style="?android:attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incident_report_report"
        android:textColor="#000" />

</LinearLayout>