<!--
  Copyright (c) 2013-2015 INRIX, Inc.

  INRIX is a registered trademark of INRIX, Inc. Any copyright, patent and trademark notice(s)
  contained herein or in related code, files or documentation shall not be altered and shall be
  included in all copies and substantial portions of the software. This software is "Sample Code".
  Refer to the License.pdf file for your rights to use this software.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.inrix.sample.activity.ReportVehicleStateActivity">

    <Button
        android:id="@+id/report_vehicle_state_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/report_vehicle_state_register_vehicle" />

    <Button
        android:id="@+id/report_vehicle_state_send_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/report_vehicle_state_report_state" />

    <Button
        android:id="@+id/report_vehicle_state_unregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/report_vehicle_state_unregister_vehicle" />

</LinearLayout>
